--- a/README
+++ b/README
@@ -3,7 +3,7 @@
 
 ## 專案簡介
 > 在這個世界裡，陽光恆照、居民被妥善照料，一切看似理想。然而，隨著玩家與居民展開對話、完成任務、參與日常耕作與戰鬥，將逐漸揭示一個更深層的真相：
-  在這個由shinx主導的封閉循環中，表面上的和平，其實是以人性為代價所交換的秩序幻象。
+  在這個由shinx主導的封閉循環中，夢被視為威脅而遭到抹除，自由則被重塑為服從的假象。表面上的和平，其實是以人性為代價所交換的秩序幻象。
   Ataraxia 以多線敘事、互動式對話與極簡像素視覺，打造一個富有哲學與倫理辯證的數位樂園，玩家不只是經營者，更是探索者與懷疑者。
 
 ## 核心功能
@@ -22,11 +22,11 @@
 - 倉庫動態顯示與查詢功能
 - UI 左上角即時同步金幣數量
 # 😄 Joke 系統
-- 點擊即可顯示「爛笑話」與英文諧音梗
+- 點擊選擇清單即可看到根據不同條件排序的爛笑話(笑話標題來自各組員英文名字的首字母)
 # 🕰️ 時間系統
 - 主頁右上顯示與系統同步的即時時間
 # 🖼️ 劇情互動
-- 內建角色對話（如 Resident 與 shinx），探討記憶、自我、秩序與控制
+- 內建角色對話（如 Resident 與 Shinx），探討記憶、自我、秩序與控制
 
 ## 技術架構
 - 遊戲引擎：Godot 4.4
@@ -36,12 +36,12 @@
 - 版本控管：GitHub / Google 雲端硬碟
 
 ## 團隊成員與分工
-| 成員   | 負責項目                                                                               | 整體project貢獻占比  |
-|--------|---------------------------------------------------------------------------------------| --------------------|
-| Nathan | 完整的 FightingPage 頁面製作、進階主頁面修改、整合所有人檔案並改用 signal 傳遞訊息、debug   |         40%         |
-| Angel  | 完整的 FarmPage 頁面、進階 Storage 與 Joke 頁面程式設計、金幣與倉庫系統程式設計、美術總指導 |         30%         |
-| Honora | 初步主頁面設計、美術組成員、進階 Task 程式設計、即時時間顯示功能、劇情設計、期末影片剪輯      |         25%         |
-| Chouch | 初步 NoticePage 設計、期中影片剪輯                                                      |         5%          |
+| 成員   | 負責項目                                                                                                                         | 整體project貢獻占比  |
+|--------|---------------------------------------------------------------------------------------------------------------------------------| --------------------|
+| Nathan | 完整的 FightingPage 頁面製作、 完整的 SkillPage 頁面製作、進階主頁面邏輯修改、整合所有人檔案並改用 signal 傳遞訊息、debug 、遊戲音效程式 |         40%         |
+| Angel  | 完整的 FarmPage 頁面、進階 Storage 與 Joke 頁面程式設計、金幣相關與倉庫系統程式設計、美術總指導、期末報告製作                           |         30%         |
+| Honora | 初步主頁面設計、美術組成員、進階 Task 程式設計、即時時間顯示功能、劇情設計、期末影片剪輯                                                |         25%         |
+| Chouch | 初步 NoticePage 設計、期中影片剪輯                                                                                                |         5%          |
 
 ## 協作工具與開發流程
 - 設計工具：Godot(程式設計)、ChatGPT+人工調整(美術設計)  
