--- a/README
+++ b/README
@@ -36,12 +36,12 @@
 - 版本控管：GitHub / Google 雲端硬碟
 
 ## 團隊成員與分工
-| 成員   | 負責項目                                                                                                                         | 整體project貢獻占比  |
-|--------|---------------------------------------------------------------------------------------------------------------------------------| --------------------|
-| Nathan | 完整的 FightingPage 頁面製作、 完整的 SkillPage 頁面製作、進階主頁面邏輯修改、整合所有人檔案並改用 signal 傳遞訊息、debug 、遊戲音效程式 |         40%         |
-| Angel  | 完整的 FarmPage 頁面、進階 Storage 與 Joke 頁面程式設計、金幣相關與倉庫系統程式設計、美術總指導、期末報告製作                           |         30%         |
-| Honora | 初步主頁面設計、美術組成員、進階 Task 程式設計、即時時間顯示功能、劇情設計、期末影片剪輯                                                |         25%         |
-| Chouch | 初步 NoticePage 設計、期中影片剪輯                                                                                                |         5%          |
+| 成員   | 負責項目                                                                                                                                  | 整體project貢獻占比  |
+|--------|------------------------------------------------------------------------------------------------------------------------------------------| --------------------|
+| Nathan | 完整的 FightingPage 頁面製作、 完整的 SkillPage 頁面製作、進階主頁面邏輯修改、整合所有人檔案並改用 signal 傳遞訊息、debug 、遊戲音效程式、遊戲設定 |         40%         |
+| Angel  | 完整的 FarmPage 頁面、進階 Storage 與 Joke 頁面程式設計、金幣相關與倉庫系統程式設計、美術總指導、期末報告製作 、遊戲設定                          |         30%         |
+| Honora | 初步主頁面設計、美術組成員、進階 Task 程式設計、即時時間顯示功能、劇情設計、期末影片剪輯 、遊戲設定                                               |         25%         |
+| Chouch | 初步 NoticePage 設計、期中影片剪輯                                                                                                          |         5%          |
 
 ## 協作工具與開發流程
 - 設計工具：Godot(程式設計)、ChatGPT+人工調整(美術設計)  
